# py-git

./: README.md
deluwich-python/: pyproject.toml
dulwich-python/: README.md  pyproject.toml
dulwich-python/src/git/branch/: filter_branch.py
dulwich-python/src/git/change/: latest_change.py
dulwich-python/src/git/clone/: clone_repository.py
dulwich-python/src/git/commit/: git_commit.py  git_commit_hsitory.py
dulwich-python/src/git/config/: git_config.py
dulwich-python/src/git/difference/: git_diff.py
dulwich-python/src/git/index/: git_index.py
dulwich-python/src/git/initialize/: git_initialize.py
dulwich-python/src/git/object_store/: object_store.py
dulwich-python/src/git/staging/: git_staging.py
dulwich-python/src/git/tagging/: dulwich_tagging.py
dulwich-python/src/git/util/: git_util.py
dulwich-python/tests/git/util/: test_git_util.py
git-python/: README.md  pyproject.toml
git-python/src/git/branch/: create_switch_new_branch.py
git-python/src/git/clone/: local_clone.py
git-python/src/git/content/: new_file_add.py
git-python/src/git/tags/: annotated_tag.py  checkout_tag.py  create_tag.py  list_all_tags.py  push_tags_remote.py  specific_tag.py
git-python/src/git_py/: git_python.py
git-python/src/git_py/branches/: create_switch_new_branch.py  list_all_branches.py
git-python/src/git_py/change/: get_changed_file.py  repository_change.py
git-python/src/git_py/change/cached/: cached_change.py
git-python/src/git_py/change/heads/: head_change.py
git-python/src/git_py/change/staged/: staged_change.py
git-python/src/git_py/change/un_staged/: unstaged_change.py
git-python/src/git_py/clone/: local_clone.py
git-python/src/git_py/cloning/: clone_from_url.py  git_clone.py
git-python/src/git_py/cloning/local_clone/: clone_local_repository.py
git-python/src/git_py/cloning/remote_clone/: clone_remote_repository.py
git-python/src/git_py/commit/: add_commit.py  commit_util.py  list_commits.py
git-python/src/git_py/commit/level/: display_level 1_content.py
git-python/src/git_py/commit/tree/: any-commit-tree.py  latest-commit-tree.py
git-python/src/git_py/config/: get_user_config.py  set_user_config.py
git-python/src/git_py/content/: new_file_add.py
git-python/src/git_py/fetch/: get_latest_metadata.py
git-python/src/git_py/remotes/crud/create/: create_branch.py
git-python/src/git_py/remotes/crud/delete/: delete_remote.py
git-python/src/git_py/remotes/crud/existence/: remote_existence.py
git-python/src/git_py/remotes/crud/listing/: listing_remote.py
git-python/src/git_py/remotes/push/: push_to_remote.py
git-python/src/git_py/repository/bare/: bare_repository.py
git-python/src/git_py/repository/initialization/: git_initialization.py
git-python/src/git_py/tags/: annotated_tag.py  checkout_tag.py  create_tag.py  list_all_tags.py  push_tags_remote.py  specific_tag.py
git-python/src/git_py/use_case/ci/: ci.py
git-python/src/git_py/use_case/custom_hook/: custom_hook.py
git-python/src/git_py/use_case/doc_update/: automated_documentation_update.py
git-python/src/git_py/use_case/quality_check/: quality_check.py
git-python/src/git_py/use_case/tag_release/: automated_tagging_release.py
git-python/src/git_py/util/: git_util.py
git-python/src/git_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
git-python/tests/: conftest.py  test_git_python.py
git-sh-python/: main.py  pyproject.toml
gitpy-python/: main.py  pyproject.toml
py-github/: README.md  pyproject.toml
py-github/src/github/auth/: github_auth.py
pygit2-python/: README.md  main.py  pyproject.toml
